# smart-home-project

./: CMakeLists.txt  LICENSE  README.md
include/devices/: device.hpp  light.hpp  thermostat.hpp
include/exceptions/: exceptions.hpp
include/rules/: condition_rule.hpp  rule.hpp  scheduled_rule.hpp
include/sensors/: motion_sensor.hpp  sensor.hpp  temperature_sensor.hpp
include/system/: command_processor.hpp  smart_home_system.hpp
src/: main.cpp
src/devices/: device.cpp  light.cpp  thermostat.cpp
src/rules/: condition_rule.cpp  scheduled_rule.cpp
src/sensors/: motion_sensor.cpp  temperature_sensor.cpp
src/system/: command_processor.cpp  smart_home_system.cpp
tests/devices/: test_device.cpp  test_device.hpp
tests/rules/: test_condition_rule.cpp  test_scheduled_rule.cpp
tests/sensors/: test_sensor.cpp  test_sensor.hpp
tests/system/: test_command_processor.cpp  test_smart_home.cpp
